--- a/src/main/resources/templates/favourite.html
+++ b/src/main/resources/templates/favourite.html
@@ -6,9 +6,11 @@
     <title>Jokes</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/static/js/favourite.js"></script>
+<!--    <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>-->
+<!--    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
     <link rel="stylesheet" href="/static/style.css">
 </head>
-<script src="/static/js/favourite.js"></script>
 <body>
     <div class="container-fluid">
         <header th:insert="fragments/header.html :: header"> </header>
@@ -16,7 +18,11 @@
         <div id="favouritesContainer" class="row row-cols-1 row-cols-md-2 g-4 mx-3">
                 <div th:each="jokeObj : ${favourites}" th:id="'card-' + ${jokeObj.id}" class="col card-con" th:type="${jokeObj.type}">
                     <div th:insert="fragments/card2.html :: card2" th:with="jokeObj=${jokeObj}"></div>
-                    <div>delete</div>
+                    <button class="btn btn-primary delete-btn" th:data-joke-id="${jokeObj.id}">delete</button>
+
+
+                    <!--                    <i class="fa-regular fa-trash"></i>-->
+<!--                    <i class="fa fa-cloud"></i>-->
                 </div>
         </div>
 
