--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container-fluid">
         <header th:insert="fragments/header.html :: header"> </header>
-        <h2 class="pt-4">User Profile</h2>
+        <h2 class="pt-4 d-flex justify-content-center align-items-center">User Profile</h2>
         <div class="row">
             <div class="col-md-6 offset-md-3">
 
@@ -37,7 +37,7 @@
                 </div>
             </div>
         </div>
-        <form th:action="@{/pages/logout}" method="post" class="mt-3">
+        <form th:action="@{/pages/logout}" method="post" class="mt-3 d-flex justify-content-center align-items-center">
             <button type="submit" class="btn btn-primary">Logout</button>
         </form>
     </div>
