--- a/src/main/resources/templates/favourite.html
+++ b/src/main/resources/templates/favourite.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/static/js/favourite.js"></script>
+    <script src="https://kit.fontawesome.com/4e3daad3f4.js" crossorigin="anonymous"></script>
 <!--    <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>-->
 <!--    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
     <link rel="stylesheet" href="/static/style.css">
@@ -18,10 +19,8 @@
         <div id="favouritesContainer" class="row row-cols-1 row-cols-md-2 g-4 mx-3">
                 <div th:each="jokeObj : ${favourites}" th:id="'card-' + ${jokeObj.id}" class="col card-con" th:type="${jokeObj.type}">
                     <div th:insert="fragments/card2.html :: card2" th:with="jokeObj=${jokeObj}"></div>
-                    <button class="btn btn-primary delete-btn" th:data-joke-id="${jokeObj.id}">delete</button>
-
-
-                    <!--                    <i class="fa-regular fa-trash"></i>-->
+                    <i class="fa-solid fa-trash delete-btn" th:data-joke-id="${jokeObj.id}"></i>
+<!--                    <i class="fa-solid fa-trash"></i>-->
 <!--                    <i class="fa fa-cloud"></i>-->
                 </div>
         </div>
